--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.backtrace-0.3.54.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.backtrace-0.3.54.bazel
@@ -25,23 +25,33 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "colours" with type "example" omitted
+# Unsupported target "benchmarks" with type "bench" omitted
+
+# Unsupported target "backtrace" with type "example" omitted
+
+# Unsupported target "raw" with type "example" omitted
 
 rust_library(
-    name = "ansi_term",
+    name = "backtrace",
     srcs = glob(["**/*.rs"]),
     aliases = {
     },
     crate_features = [
+        "addr2line",
+        "default",
+        "gimli-symbolize",
+        "miniz_oxide",
+        "object",
+        "std",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -49,17 +59,32 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.3.54",
     # buildifier: leave-alone
     deps = [
+        "@remote_binary_dependencies__addr2line__0_14_0//:addr2line",
+        "@remote_binary_dependencies__cfg_if__1_0_0//:cfg_if",
+        "@remote_binary_dependencies__libc__0_2_80//:libc",
+        "@remote_binary_dependencies__miniz_oxide__0_4_3//:miniz_oxide",
+        "@remote_binary_dependencies__object__0_22_0//:object",
+        "@remote_binary_dependencies__rustc_demangle__0_1_18//:rustc_demangle",
     ] + selects.with_or({
-        # cfg(target_os = "windows")
+        # cfg(windows)
         (
             "@io_bazel_rules_rust//rust/platform:i686-pc-windows-msvc",
             "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-msvc",
         ): [
-            "@remote_binary_dependencies__winapi__0_3_9//:winapi",
         ],
         "//conditions:default": [],
     }),
 )
+
+# Unsupported target "accuracy" with type "test" omitted
+
+# Unsupported target "concurrent-panics" with type "test" omitted
+
+# Unsupported target "long_fn_name" with type "test" omitted
+
+# Unsupported target "skip_inner_frames" with type "test" omitted
+
+# Unsupported target "smoke" with type "test" omitted
