--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.bytemuck-1.4.1.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.bytemuck-1.4.1.bazel
@@ -25,25 +25,19 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # Zlib from expression "Zlib OR (Apache-2.0 OR MIT)"
 ])
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
-
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
-
 rust_library(
-    name = "textwrap",
+    name = "bytemuck",
     srcs = glob(["**/*.rs"]),
     crate_features = [
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,11 +45,18 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "1.4.1",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
     ],
 )
 
-# Unsupported target "version-numbers" with type "test" omitted
+# Unsupported target "cast_slice_tests" with type "test" omitted
+
+# Unsupported target "derive" with type "test" omitted
+
+# Unsupported target "doc_tests" with type "test" omitted
+
+# Unsupported target "offset_of_tests" with type "test" omitted
+
+# Unsupported target "std_tests" with type "test" omitted
