--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.deflate-0.8.6.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.deflate-0.8.6.bazel
@@ -25,25 +25,21 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
-
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
+# Unsupported target "bench" with type "bench" omitted
 
 rust_library(
-    name = "textwrap",
+    name = "deflate",
     srcs = glob(["**/*.rs"]),
     crate_features = [
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,11 +47,10 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.8.6",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
+        "@remote_binary_dependencies__adler32__1_2_0//:adler32",
+        "@remote_binary_dependencies__byteorder__1_3_4//:byteorder",
     ],
 )
-
-# Unsupported target "version-numbers" with type "test" omitted
