--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.image-0.23.10.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.image-0.23.10.bazel
@@ -30,20 +30,25 @@ licenses([
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
+# Unsupported target "decode" with type "bench" omitted
 
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
+# Unsupported target "encode" with type "bench" omitted
 
 rust_library(
-    name = "textwrap",
+    name = "image",
     srcs = glob(["**/*.rs"]),
+    aliases = {
+        "@remote_binary_dependencies__jpeg_decoder__0_1_20//:jpeg_decoder": "jpeg",
+    },
     crate_features = [
+        "bmp",
+        "jpeg",
+        "png",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    data = ["README.md"],
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,11 +56,15 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.23.10",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
+        "@remote_binary_dependencies__bytemuck__1_4_1//:bytemuck",
+        "@remote_binary_dependencies__byteorder__1_3_4//:byteorder",
+        "@remote_binary_dependencies__jpeg_decoder__0_1_20//:jpeg_decoder",
+        "@remote_binary_dependencies__num_iter__0_1_42//:num_iter",
+        "@remote_binary_dependencies__num_rational__0_3_1//:num_rational",
+        "@remote_binary_dependencies__num_traits__0_2_14//:num_traits",
+        "@remote_binary_dependencies__png__0_16_7//:png",
     ],
 )
-
-# Unsupported target "version-numbers" with type "test" omitted
