--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.jpeg-decoder-0.1.20.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.jpeg-decoder-0.1.20.bazel
@@ -25,19 +25,17 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
+# Unsupported target "decoding_benchmark" with type "bench" omitted
 
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
+# Unsupported target "decode" with type "example" omitted
 
 rust_library(
-    name = "textwrap",
+    name = "jpeg_decoder",
     srcs = glob(["**/*.rs"]),
     crate_features = [
     ],
@@ -51,11 +49,9 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.1.20",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
+        "@remote_binary_dependencies__byteorder__1_3_4//:byteorder",
     ],
 )
-
-# Unsupported target "version-numbers" with type "test" omitted
