--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.miniz_oxide-0.3.7.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.miniz_oxide-0.3.7.bazel
@@ -30,20 +30,14 @@ licenses([
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
-
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
-
 rust_library(
-    name = "textwrap",
+    name = "miniz_oxide",
     srcs = glob(["**/*.rs"]),
     crate_features = [
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,11 +45,9 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.3.7",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
+        "@remote_binary_dependencies__adler32__1_2_0//:adler32",
     ],
 )
-
-# Unsupported target "version-numbers" with type "test" omitted
