--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.miniz_oxide-0.4.3.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.miniz_oxide-0.4.3.bazel
@@ -25,25 +25,26 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # MIT from expression "MIT OR (Zlib OR Apache-2.0)"
 ])
 
 # Generated Targets
+# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
 
-# Unsupported target "linear" with type "bench" omitted
-
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
-
-rust_library(
-    name = "textwrap",
+cargo_build_script(
+    name = "miniz_oxide_build_script",
     srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
     crate_features = [
     ],
-    crate_root = "src/lib.rs",
-    crate_type = "lib",
-    edition = "2015",
+    crate_root = "build.rs",
+    data = glob(["**"]),
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,11 +52,32 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
-    # buildifier: leave-alone
+    version = "0.4.3",
+    visibility = ["//visibility:private"],
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
+        "@remote_binary_dependencies__autocfg__1_0_1//:autocfg",
     ],
 )
 
-# Unsupported target "version-numbers" with type "test" omitted
+rust_library(
+    name = "miniz_oxide",
+    srcs = glob(["**/*.rs"]),
+    crate_features = [
+    ],
+    crate_root = "src/lib.rs",
+    crate_type = "lib",
+    edition = "2018",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "0.4.3",
+    # buildifier: leave-alone
+    deps = [
+        ":miniz_oxide_build_script",
+        "@remote_binary_dependencies__adler__0_2_3//:adler",
+    ],
+)
