--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.num-iter-0.1.42.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.num-iter-0.1.42.bazel
@@ -29,16 +29,24 @@ licenses([
 ])
 
 # Generated Targets
+# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
 
-rust_library(
-    name = "rstar",
+cargo_build_script(
+    name = "num_iter_build_script",
     srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
     crate_features = [
         "default",
+        "std",
     ],
-    crate_root = "src/lib.rs",
-    crate_type = "lib",
-    edition = "2018",
+    crate_root = "build.rs",
+    data = glob(["**"]),
+    edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -46,10 +54,35 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.7.1",
+    version = "0.1.42",
+    visibility = ["//visibility:private"],
+    deps = [
+        "@remote_binary_dependencies__autocfg__1_0_1//:autocfg",
+    ],
+)
+
+rust_library(
+    name = "num_iter",
+    srcs = glob(["**/*.rs"]),
+    crate_features = [
+        "default",
+        "std",
+    ],
+    crate_root = "src/lib.rs",
+    crate_type = "lib",
+    edition = "2015",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "0.1.42",
     # buildifier: leave-alone
     deps = [
+        ":num_iter_build_script",
+        "@remote_binary_dependencies__num_integer__0_1_44//:num_integer",
         "@remote_binary_dependencies__num_traits__0_2_14//:num_traits",
-        "@remote_binary_dependencies__pdqselect__0_1_0//:pdqselect",
     ],
 )
