--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.num-rational-0.3.1.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.num-rational-0.3.1.bazel
@@ -29,12 +29,40 @@ licenses([
 ])
 
 # Generated Targets
+# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
+
+cargo_build_script(
+    name = "num_rational_build_script",
+    srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
+    crate_features = [
+    ],
+    crate_root = "build.rs",
+    data = glob(["**"]),
+    edition = "2018",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "0.3.1",
+    visibility = ["//visibility:private"],
+    deps = [
+        "@remote_binary_dependencies__autocfg__1_0_1//:autocfg",
+    ],
+)
 
 rust_library(
-    name = "rstar",
+    name = "num_rational",
     srcs = glob(["**/*.rs"]),
     crate_features = [
-        "default",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
@@ -46,10 +74,11 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.7.1",
+    version = "0.3.1",
     # buildifier: leave-alone
     deps = [
+        ":num_rational_build_script",
+        "@remote_binary_dependencies__num_integer__0_1_44//:num_integer",
         "@remote_binary_dependencies__num_traits__0_2_14//:num_traits",
-        "@remote_binary_dependencies__pdqselect__0_1_0//:pdqselect",
     ],
 )
