--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.num_cpus-1.13.0.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.num_cpus-1.13.0.bazel
@@ -25,19 +25,15 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
-
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
+# Unsupported target "values" with type "example" omitted
 
 rust_library(
-    name = "textwrap",
+    name = "num_cpus",
     srcs = glob(["**/*.rs"]),
     crate_features = [
     ],
@@ -51,11 +47,9 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "1.13.0",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
+        "@remote_binary_dependencies__libc__0_2_80//:libc",
     ],
 )
-
-# Unsupported target "version-numbers" with type "test" omitted
