--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.object-0.22.0.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.object-0.22.0.bazel
@@ -25,25 +25,36 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # Apache-2.0 from expression "Apache-2.0 OR MIT"
 ])
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
+# Unsupported target "ar" with type "example" omitted
 
-# Unsupported target "layout" with type "example" omitted
+# Unsupported target "nm" with type "example" omitted
 
-# Unsupported target "termwidth" with type "example" omitted
+# Unsupported target "objcopy" with type "example" omitted
+
+# Unsupported target "objdump" with type "example" omitted
+
+# Unsupported target "objectmap" with type "example" omitted
 
 rust_library(
-    name = "textwrap",
+    name = "object",
     srcs = glob(["**/*.rs"]),
     crate_features = [
+        "archive",
+        "coff",
+        "elf",
+        "macho",
+        "pe",
+        "read_core",
+        "unaligned",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,11 +62,12 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.22.0",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
     ],
 )
 
-# Unsupported target "version-numbers" with type "test" omitted
+# Unsupported target "integration" with type "test" omitted
+
+# Unsupported target "parse_self" with type "test" omitted
