--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.png-0.16.7.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.png-0.16.7.bazel
@@ -25,25 +25,28 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
+# Unsupported target "decoder" with type "bench" omitted
 
-# Unsupported target "layout" with type "example" omitted
+# Unsupported target "pngcheck" with type "example" omitted
 
-# Unsupported target "termwidth" with type "example" omitted
+# Unsupported target "show" with type "example" omitted
 
 rust_library(
-    name = "textwrap",
+    name = "png",
     srcs = glob(["**/*.rs"]),
     crate_features = [
+        "default",
+        "deflate",
+        "png-encoding",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,11 +54,12 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.16.7",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
+        "@remote_binary_dependencies__bitflags__1_2_1//:bitflags",
+        "@remote_binary_dependencies__crc32fast__1_2_1//:crc32fast",
+        "@remote_binary_dependencies__deflate__0_8_6//:deflate",
+        "@remote_binary_dependencies__miniz_oxide__0_3_7//:miniz_oxide",
     ],
 )
-
-# Unsupported target "version-numbers" with type "test" omitted
