--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.proc-macro-error-1.0.4.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.proc-macro-error-1.0.4.bazel
@@ -36,28 +36,18 @@ load(
 )
 
 cargo_build_script(
-    name = "winapi_build_script",
+    name = "proc_macro_error_build_script",
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
     crate_features = [
-        "consoleapi",
-        "errhandlingapi",
-        "fileapi",
-        "handleapi",
-        "minwinbase",
-        "minwindef",
-        "processenv",
-        "std",
-        "winbase",
-        "wincon",
-        "winerror",
-        "winnt",
-        "winuser",
+        "default",
+        "syn",
+        "syn-error",
     ],
     crate_root = "build.rs",
     data = glob(["**"]),
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -65,33 +55,27 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "0.3.9",
+    version = "1.0.4",
     visibility = ["//visibility:private"],
     deps = [
+        "@remote_binary_dependencies__version_check__0_9_2//:version_check",
     ],
 )
 
 rust_library(
-    name = "winapi",
+    name = "proc_macro_error",
     srcs = glob(["**/*.rs"]),
     crate_features = [
-        "consoleapi",
-        "errhandlingapi",
-        "fileapi",
-        "handleapi",
-        "minwinbase",
-        "minwindef",
-        "processenv",
-        "std",
-        "winbase",
-        "wincon",
-        "winerror",
-        "winnt",
-        "winuser",
+        "default",
+        "syn",
+        "syn-error",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
+    proc_macro_deps = [
+        "@remote_binary_dependencies__proc_macro_error_attr__1_0_4//:proc_macro_error_attr",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -99,9 +83,18 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.3.9",
+    version = "1.0.4",
     # buildifier: leave-alone
     deps = [
-        ":winapi_build_script",
+        ":proc_macro_error_build_script",
+        "@remote_binary_dependencies__proc_macro2__1_0_24//:proc_macro2",
+        "@remote_binary_dependencies__quote__1_0_7//:quote",
+        "@remote_binary_dependencies__syn__1_0_48//:syn",
     ],
 )
+
+# Unsupported target "macro-errors" with type "test" omitted
+
+# Unsupported target "ok" with type "test" omitted
+
+# Unsupported target "runtime-errors" with type "test" omitted
