--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.proc-macro-error-attr-1.0.4.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.proc-macro-error-attr-1.0.4.bazel
@@ -29,15 +29,21 @@ licenses([
 ])
 
 # Generated Targets
+# buildifier: disable=load-on-top
+load(
+    "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
+    "cargo_build_script",
+)
 
-rust_library(
-    name = "rstar",
+cargo_build_script(
+    name = "proc_macro_error_attr_build_script",
     srcs = glob(["**/*.rs"]),
+    build_script_env = {
+    },
     crate_features = [
-        "default",
     ],
-    crate_root = "src/lib.rs",
-    crate_type = "lib",
+    crate_root = "build.rs",
+    data = glob(["**"]),
     edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
@@ -46,10 +52,33 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.7.1",
+    version = "1.0.4",
+    visibility = ["//visibility:private"],
+    deps = [
+        "@remote_binary_dependencies__version_check__0_9_2//:version_check",
+    ],
+)
+
+rust_library(
+    name = "proc_macro_error_attr",
+    srcs = glob(["**/*.rs"]),
+    crate_features = [
+    ],
+    crate_root = "src/lib.rs",
+    crate_type = "proc-macro",
+    edition = "2018",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
+    version = "1.0.4",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__num_traits__0_2_14//:num_traits",
-        "@remote_binary_dependencies__pdqselect__0_1_0//:pdqselect",
+        ":proc_macro_error_attr_build_script",
+        "@remote_binary_dependencies__proc_macro2__1_0_24//:proc_macro2",
+        "@remote_binary_dependencies__quote__1_0_7//:quote",
     ],
 )
