--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.rand_chacha-0.2.2.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.rand_chacha-0.2.2.bazel
@@ -25,25 +25,19 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
-
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
-
 rust_library(
-    name = "textwrap",
+    name = "rand_chacha",
     srcs = glob(["**/*.rs"]),
     crate_features = [
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,11 +45,10 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.2.2",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
+        "@remote_binary_dependencies__ppv_lite86__0_2_9//:ppv_lite86",
+        "@remote_binary_dependencies__rand_core__0_5_1//:rand_core",
     ],
 )
-
-# Unsupported target "version-numbers" with type "test" omitted
