--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.unicode-xid-0.2.1.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.unicode-xid-0.2.1.bazel
@@ -25,21 +25,16 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "linear" with type "bench" omitted
-
-# Unsupported target "layout" with type "example" omitted
-
-# Unsupported target "termwidth" with type "example" omitted
-
 rust_library(
-    name = "textwrap",
+    name = "unicode_xid",
     srcs = glob(["**/*.rs"]),
     crate_features = [
+        "default",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
@@ -51,11 +46,10 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.11.0",
+    version = "0.2.1",
     # buildifier: leave-alone
     deps = [
-        "@remote_binary_dependencies__unicode_width__0_1_8//:unicode_width",
     ],
 )
 
-# Unsupported target "version-numbers" with type "test" omitted
+# Unsupported target "exhaustive_tests" with type "test" omitted
