--- a/smoke_test/remote/no_deps/Cargo.toml
+++ b/smoke_test/remote/no_deps/Cargo.toml
@@ -11,3 +11,4 @@ path = "src/main.rs"
 workspace_path = "//remote/no_deps/cargo"
 genmode = "Remote"
 gen_workspace_prefix = "remote_no_deps"
+package_aliases_dir = "cargo"
