--- a/smoke_test/vendored/cargo_workspace/Cargo.toml
+++ b/smoke_test/vendored/cargo_workspace/Cargo.toml
@@ -10,3 +10,4 @@ workspace_path = "//vendored/cargo_workspace/cargo"
 gen_workspace_prefix = "vendored_cargo_workspace"
 genmode = "Vendored"
 default_gen_buildrs = true
+package_aliases_dir = "cargo"
