--- a/smoke_test/remote/non_cratesio/Cargo.toml
+++ b/smoke_test/remote/non_cratesio/Cargo.toml
@@ -20,6 +20,7 @@ workspace_path = "//remote/non_cratesio/cargo"
 target = "x86_64-unknown-linux-gnu"
 genmode = "Remote"
 gen_workspace_prefix = "remote_non_cratesio"
+package_aliases_dir = "cargo"
 
 [package.metadata.raze.crates.log.'0.4.11']
 additional_flags = [
