--- a/smoke_test/vendored/complicated_cargo_library/Cargo.toml
+++ b/smoke_test/vendored/complicated_cargo_library/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 workspace_path = "//vendored/complicated_cargo_library/cargo"
 gen_workspace_prefix = "vendored_complicated_cargo_library"
 genmode = "Vendored"
+package_aliases_dir = "cargo"
 
 [package.metadata.raze.crates.proc-macro2.'0.4.30']
 additional_flags = [
