--- a/smoke_test/vendored/complicated_cargo_library/BUILD
+++ b/smoke_test/vendored/complicated_cargo_library/BUILD
@@ -1,12 +1,10 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
+load("//vendored/complicated_cargo_library/cargo:crates.bzl", "all_crates")
 
 package(default_visibility = ["//visibility:public"])
 
 rust_binary(
     name = "complicated_cargo_library",
     srcs = ["src/main.rs"],
-    deps = [
-        "//vendored/complicated_cargo_library/cargo:regex",
-        "//vendored/complicated_cargo_library/cargo:specs",
-    ],
+    deps = all_crates(),
 )
