support compile_data
https://github.com/bazelbuild/rules_rust/pull/516

--- a/impl/src/rendering/templates/partials/common_attrs.template
+++ b/impl/src/rendering/templates/partials/common_attrs.template
@@ -30,6 +30,9 @@
     {%- endfor %}
     ]
     {%- endif %},
+    {%- if crate.raze_settings.compile_data_attr %}
+    compile_data = {{crate.raze_settings.compile_data_attr}},
+    {%- endif %}
     edition = "{{ target.edition }}",
     {%- if crate.default_deps.proc_macro_dependencies %}
     proc_macro_deps = [
