--- a/examples/remote/no_deps/cargo/BUILD.bazel
+++ b/examples/remote/no_deps/cargo/BUILD.bazel
@@ -11,4 +11,9 @@ licenses([
     "notice",  # See individual crates for specific licenses
 ])
 
+# Export file for Stardoc support
+exports_files([
+    "crates.bzl",
+])
+
 # No targets defined
