--- a/examples/remote/non_cratesio/cargo/BUILD.bazel
+++ b/examples/remote/non_cratesio/cargo/BUILD.bazel
@@ -11,6 +11,11 @@ licenses([
     "notice",  # See individual crates for specific licenses
 ])
 
+# Export file for Stardoc support
+exports_files([
+    "crates.bzl",
+])
+
 # Aliased targets
 alias(
     name = "env_logger",
