--- a/examples/remote/no_deps/cargo/BUILD.bazel
+++ b/examples/remote/no_deps/cargo/BUILD.bazel
@@ -11,9 +11,12 @@ licenses([
     "notice",  # See individual crates for specific licenses
 ])
 
-# Export file for Stardoc support
-exports_files([
-    "crates.bzl",
-])
-
 # No targets defined
+
+# Export file for Stardoc support
+exports_files(
+    [
+        "crates.bzl",
+    ],
+    visibility = ["//visibility:public"],
+)
