--- a/examples/remote/complicated_cargo_library/cargo/BUILD.bazel
+++ b/examples/remote/complicated_cargo_library/cargo/BUILD.bazel
@@ -11,11 +11,6 @@ licenses([
     "notice",  # See individual crates for specific licenses
 ])
 
-# Export file for Stardoc support
-exports_files([
-    "crates.bzl",
-])
-
 # Aliased targets
 alias(
     name = "libloading",
@@ -51,4 +46,12 @@ alias(
         "cargo-raze",
         "manual",
     ],
+)
+
+# Export file for Stardoc support
+exports_files(
+    [
+        "crates.bzl",
+    ],
+    visibility = ["//visibility:public"],
 )
