--- a/examples/vendored/non_cratesio_library/cargo/BUILD.bazel
+++ b/examples/vendored/non_cratesio_library/cargo/BUILD.bazel
@@ -38,3 +38,11 @@ alias(
         "manual",
     ],
 )
+
+# Export file for Stardoc support
+exports_files(
+    [
+        "crates.bzl",
+    ],
+    visibility = ["//visibility:public"],
+)
