--- a/smoke_test/vendored/hello_cargo_library/BUILD
+++ b/smoke_test/vendored/hello_cargo_library/BUILD
@@ -1,10 +1,12 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
-load("//vendored/hello_cargo_library/cargo:crates.bzl", "all_crates")
 
 package(default_visibility = ["//visibility:public"])
 
 rust_binary(
     name = "hello_cargo_library",
     srcs = ["src/main.rs"],
-    deps = all_crates(),
+    deps = [
+        "//vendored/hello_cargo_library/cargo:fern",
+        "//vendored/hello_cargo_library/cargo:log",
+    ],
 )
