Make crates.bzl public (#328)
* Added stardoc support

* Updated examples

* Addressed PR feedback

* Updated examples

* Addressed PR feedback

--- a/examples/remote/no_deps/cargo/BUILD.bazel
+++ b/examples/remote/no_deps/cargo/BUILD.bazel
@@ -12,3 +12,11 @@ licenses([
 ])
 
 # No targets defined
+
+# Export file for Stardoc support
+exports_files(
+    [
+        "crates.bzl",
+    ],
+    visibility = ["//visibility:public"],
+)
