--- a/examples/remote/binary_dependencies/cargo/BUILD.bazel
+++ b/examples/remote/binary_dependencies/cargo/BUILD.bazel
@@ -31,3 +31,11 @@ alias(
         "manual",
     ],
 )
+
+# Export file for Stardoc support
+exports_files(
+    [
+        "crates.bzl",
+    ],
+    visibility = ["//visibility:public"],
+)
