--- a/examples/remote/cargo_workspace/rng/cargo/BUILD.bazel
+++ b/examples/remote/cargo_workspace/rng/cargo/BUILD.bazel
@@ -20,3 +20,11 @@ alias(
         "manual",
     ],
 )
+
+# Export file for Stardoc support
+exports_files(
+    [
+        "crates.bzl",
+    ],
+    visibility = ["//visibility:public"],
+)
