--- a/examples/remote/complicated_cargo_library/cargo/BUILD.bazel
+++ b/examples/remote/complicated_cargo_library/cargo/BUILD.bazel
@@ -47,3 +47,11 @@ alias(
         "manual",
     ],
 )
+
+# Export file for Stardoc support
+exports_files(
+    [
+        "crates.bzl",
+    ],
+    visibility = ["//visibility:public"],
+)
