Updated macros `crates` -> `crate_deps` and `all_crates` -> `all_crate_deps`

--- a/impl/src/rendering/templates/partials/crates_macro.template
+++ b/impl/src/rendering/templates/partials/crates_macro.template
@@ -70,7 +70,7 @@ _DEV_PROC_MACRO_DEPENDENCIES = {
 {%- endfor %}
 }
 
-def crates(deps, package_name = None):
+def crate_deps(deps, package_name = None):
     """EXPERIMENTAL -- MAY CHANGE AT ANY TIME: Finds the fully qualified label of the requested crates for the package where this macro is called.
 
     WARNING: This macro is part of an expeirmental API and is subject to change.
@@ -114,7 +114,7 @@ def crates(deps, package_name = None):
 
     return crate_targets
 
-def all_crates(normal = False, normal_dev = False, proc_macro = False, proc_macro_dev = False, package_name = None):
+def all_crate_deps(normal = False, normal_dev = False, proc_macro = False, proc_macro_dev = False, package_name = None):
     """EXPERIMENTAL -- MAY CHANGE AT ANY TIME: Finds the fully qualified label of all requested direct crate dependencies \
     for the package where this macro is called.
 
