--- a/smoke_test/vendored/cargo_workspace/num_printer/BUILD.bazel
+++ b/smoke_test/vendored/cargo_workspace/num_printer/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
-load("//vendored/cargo_workspace/cargo:crates.bzl", "all_crates")
+load("//vendored/cargo_workspace/cargo:crates.bzl", "all_crate_deps")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -9,5 +9,5 @@ rust_binary(
     edition = "2018",
     deps = [
         "//vendored/cargo_workspace/printer",
-    ] + all_crates(),
+    ] + all_crate_deps(),
 )
