--- a/smoke_test/vendored/cargo_workspace/rng/BUILD.bazel
+++ b/smoke_test/vendored/cargo_workspace/rng/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")
-load("//vendored/cargo_workspace/cargo:crates.bzl", "all_crates")
+load("//vendored/cargo_workspace/cargo:crates.bzl", "all_crate_deps")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -7,5 +7,5 @@ rust_library(
     name = "rng",
     srcs = ["src/lib.rs"],
     edition = "2018",
-    deps = all_crates(),
+    deps = all_crate_deps(),
 )
