Add experimental api `crate_deps` and `all_crate_deps` macro for gathering package dependencies (#319)
* The crates.bzl can be used to locate crates

* Updated smoketest

* Updated examples

* It should not be an error that no dependencies are found.

The use case here is users might want to stub out all the dependency sections of their crates such that subsequent runs of `cargo raze` will automatically add new dependencies.

* Updated examples

* New API has been flagged experimental

* Updated examples

* Updated more comments

* Updated examples

* Updated documentation

* Addressed PR feedback.

* Updated examples

* Addressed PR feedback

* Updated examples

* Addressed PR feedback

* Updated examples

* Fixed typo

* Updated

* Added experimental_api flag

* Updated smoketest

* Updated examples

* Fixed buildifier defects

* Updated examples

* Addressed PR feedback

* Updated examples

* Addressed PR feedback

* Updated examples

* Addressed PR feedback

* Updated examples

* updated smoketest

* Updated examples

* Cleanup

* Updated examples

* Updated macros `crates` -> `crate_deps` and `all_crates` -> `all_crate_deps`

* Updated examples

--- a/impl/src/rendering/templates/remote_crates.bzl.template
+++ b/impl/src/rendering/templates/remote_crates.bzl.template
@@ -1,8 +1,11 @@
 {%- include "templates/partials/header.template" %}
+{%- if is_remote_genmode %}
 load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")  # buildifier: disable=load
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")  # buildifier: disable=load
 load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")  # buildifier: disable=load
-
+{% if experimental_api %}
+{% include "templates/partials/crates_macro.template" %}
+{% endif %}
 def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {%- if crates %}
     """This function defines a collection of repos and should be called in a WORKSPACE file"""
@@ -35,4 +38,7 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {%- else %}
     """No crates were detected in the source Cargo.toml. This is a no-op"""
     pass
-{%  endif -%}
+{% endif %}
+{%- else %}
+{% include "templates/partials/crates_macro.template" %}
+{% endif %}
