--- a/examples/remote/binary_dependencies/BUILD.bazel
+++ b/examples/remote/binary_dependencies/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
+load("//remote/binary_dependencies/cargo:crates.bzl", "all_crate_deps")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -8,7 +9,5 @@ rust_binary(
     data = [
         "//remote/binary_dependencies/cargo:cargo_bin_texture_synthesis",
     ],
-    deps = [
-        "//remote/binary_dependencies/cargo:ferris_says",
-    ],
+    deps = all_crate_deps(),
 )
