--- a/examples/remote/cargo_workspace/num_printer/BUILD.bazel
+++ b/examples/remote/cargo_workspace/num_printer/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
+load("//remote/cargo_workspace/cargo:crates.bzl", "all_crate_deps")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -7,7 +8,6 @@ rust_binary(
     srcs = ["src/main.rs"],
     edition = "2018",
     deps = [
-        "//remote/cargo_workspace/num_printer/cargo:clap",
         "//remote/cargo_workspace/printer",
-    ],
+    ] + all_crate_deps(),
 )
