--- a/examples/vendored/cargo_workspace/printer/BUILD.bazel
+++ b/examples/vendored/cargo_workspace/printer/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")
+load("//vendored/cargo_workspace/cargo:crates.bzl", "all_crate_deps")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -7,7 +8,6 @@ rust_library(
     srcs = ["src/lib.rs"],
     edition = "2018",
     deps = [
-        "//vendored/cargo_workspace/printer/cargo:ferris_says",
         "//vendored/cargo_workspace/rng",
-    ],
+    ] + all_crate_deps(),
 )
