--- a/examples/vendored/cargo_workspace/Cargo.toml
+++ b/examples/vendored/cargo_workspace/Cargo.toml
@@ -12,4 +12,4 @@ genmode = "Vendored"
 default_gen_buildrs = true
 package_aliases_dir = "cargo"
 experimental_api = true
-
+render_package_aliases = false
