--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -55,3 +55,87 @@ httpmock = "0.5.2"
 indoc = "1.0.3"
 lazy_static = "1.4.0"
 tar = "0.4.30"
+
+[package.metadata.raze]
+workspace_path = "//third_party/cargo"
+gen_workspace_prefix = "cargo_raze"
+genmode = "Remote"
+default_gen_buildrs = true
+experimental_api = true
+render_package_aliases = false
+targets = [
+    "aarch64-apple-darwin",
+    "aarch64-unknown-linux-gnu",
+    "i686-apple-darwin",
+    "i686-pc-windows-msvc",
+    "i686-unknown-linux-gnu",
+    "x86_64-apple-darwin",
+    "x86_64-pc-windows-msvc",
+    "x86_64-unknown-linux-gnu",
+]
+
+[package.metadata.raze.crates.crossbeam-utils.'*']
+gen_buildrs = false
+additional_flags = [
+    "--cfg=has_atomic_u8",
+    "--cfg=has_atomic_u16",
+    "--cfg=has_atomic_u32",
+    "--cfg=has_atomic_u64",
+]
+
+[package.metadata.raze.crates.curl-sys.'*']
+# build.rs file: https://github.com/alexcrichton/curl-rust/blob/master/curl-sys/build.rs
+gen_buildrs = false
+additional_deps = ["@curl//:curl"]
+
+[package.metadata.raze.crates.deunicode.'*']
+# This string is buildifier compliant
+data_attr = """\
+glob(
+        ["**"],
+        exclude = ["**/*.rs"],
+    )"""
+
+[package.metadata.raze.crates.libgit2-sys.'*']
+# build.rs file: https://github.com/rust-lang/git2-rs/blob/master/libgit2-sys/build.rs
+gen_buildrs = false
+additional_deps = ["@libgit2//:libgit2"]
+
+[package.metadata.raze.crates.libssh2-sys.'*']
+# build.rs file: https://github.com/alexcrichton/ssh2-rs/blob/master/libssh2-sys/build.rs
+build_data_dependencies = [
+    "@libssh2//:libssh2",
+    "@openssl//:openssl",
+]
+additional_deps = ["@libssh2//:libssh2"]
+
+[package.metadata.raze.crates.libz-sys.'*']
+# build.rs file: https://github.com/rust-lang/libz-sys/blob/main/build.rs
+gen_buildrs = false
+additional_flags = ["--cfg=static"]
+
+[package.metadata.raze.crates.openssl.'*']
+additional_deps = ["@openssl//:openssl"]
+
+[package.metadata.raze.crates.openssl-sys.'*']
+# build.rs file: https://github.com/sfackler/rust-openssl/blob/master/openssl-sys/build/main.rs
+build_data_dependencies = [
+    "@openssl//:openssl",
+    "@openssl//:gen_dir",
+]
+additional_deps = ["@openssl//:openssl"]
+    [package.metadata.raze.crates.openssl-sys.'*'.buildrs_additional_environment_variables]
+        OPENSSL_DIR="$(location @openssl//:gen_dir)"
+        OPENSSL_STATIC="1"
+
+[package.metadata.raze.crates.semver-parser.'*']
+data_attr = "glob([\"**/*.pest\"])"
+
+[package.metadata.raze.crates.tera.'*']
+data_attr = "glob([\"**/*.pest\"])"
+
+[package.metadata.raze.crates.unic-ucd-version.'*']
+data_attr = "glob([\"**/*.rsv\"])"
+
+[package.metadata.raze.crates.unic-ucd-segment.'*']
+data_attr = "glob([\"**/*.rsv\"])"
