--- a/impl/src/rendering/templates/partials/rust_binary.template
+++ b/impl/src/rendering/templates/partials/rust_binary.template
@@ -3,20 +3,23 @@ rust_binary(
     # N.B.: The exact form of this is subject to change.
     name = "cargo_bin_{{ target_name_sanitized }}",
 {% include "templates/partials/common_attrs.template" %}
-    # buildifier: leave-alone
+{%- set deps = [] %}
+{%- if crate.lib_target_name %}{# Binaries get an implicit dependency on their crate's lib #}
+    {%- set deps = deps | concat(with=":" ~ crate.lib_target_name | replace(from='-', to='_')) %}
+{%- endif %}
+{%- if crate.build_script_target %}
+    {%- set deps = deps | concat(with=":" ~ crate_name_sanitized ~ "_build_script") %}
+{%- endif %}
+{%- for dependency in crate.default_deps.dependencies %}
+    {%- set_global deps = deps | concat(with=dependency.buildable_target) %}
+{%- endfor %}
+{%- for dependency in crate.raze_settings.additional_deps %}
+    {%- set_global deps = deps | concat(with=dependency) %}
+{%- endfor %}
+    # buildifier: leave-alone{# TODO: https://github.com/google/cargo-raze/issues/348 #}
     deps = [
-        {%- if crate.lib_target_name %}
-        # Binaries get an implicit dependency on their crate's lib
-        ":{{crate.lib_target_name | replace(from="-", to="_") }}",
-        {%- endif %}
-        {%- if crate.build_script_target %}
-        ":{{ crate_name_sanitized }}_build_script",
-        {%- endif %}
-        {%- for dependency in crate.default_deps.dependencies %}
-        "{{dependency.buildable_target}}",
-        {%- endfor %}
-        {%- for dependency in crate.raze_settings.additional_deps %}
-        "{{dependency}}",
+        {%- for dep in deps | sort %}
+        "{{ dep }}",
         {%- endfor %}
     ]
     {%- if crate.targeted_deps %} 
