Adds support for trailing underscores in aliased dependencies

--- a/impl/src/testing/metadata_templates/plan_build_produces_aliased_dependencies.json.template
+++ b/impl/src/testing/metadata_templates/plan_build_produces_aliased_dependencies.json.template
@@ -104,7 +104,7 @@ cargo-raze-alias-test = "0.1"
                     "source": "registry+https://github.com/rust-lang/crates.io-index",
                     "req": "^0.3",
                     "kind": null,
-                    "rename": "old_log",
+                    "rename": "old_log_",
                     "optional": false,
                     "uses_default_features": true,
                     "features": [],
